--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ all-features = true
 [features]
 default = ["std"]
 std = [
-    "codec/std"
+    "codec/std",
+    "scale-info/std"
 ]
 
 [dependencies]
@@ -18,3 +19,4 @@ codec = { package = "parity-scale-codec", version = "3.0.0", default-features = 
     "derive",
 ] }
 derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "display"] }
+scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
