--- a/.github/workflows/build-test-and-lint.yml
+++ b/.github/workflows/build-test-and-lint.yml
@@ -34,7 +34,7 @@ jobs:
         run:  cargo build --all-targets --all-features --verbose
 
       - name: Build `no-std`
-        run:  cargo build --no-default-features --verbose
+        run:  cargo build --no-default-features --verbose --target=wasm32-unknown-unknown
 
       - name: Run tests
         run: cargo test --all-features --verbose
