--- a/.github/workflows/build-test-and-lint.yml
+++ b/.github/workflows/build-test-and-lint.yml
@@ -34,7 +34,7 @@ jobs:
         run:  cargo +nightly build --no-default-features --verbose --target=wasm32-unknown-unknown
 
       - name: Run tests
-        run: cargo test --all-features --verbose
+        run: cargo +nightly test --all-features --verbose
 
   lint:
     runs-on: ubuntu-latest
