--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ codec = { package = "parity-scale-codec", version = "3.0.0", default-features = 
 derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "display"] }
 scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
 serde = { version = "1.0.136", features = ["derive"], optional = true }
+ethabi = { version = "18.0.0", default-features = false }
