--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,26 @@ authors = ["Polytope Labs <hello@polytope.technology>"]
 all-features = true
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
-derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "display"] }
-scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
+    "derive",
+] }
+derive_more = { version = "0.99.17", default-features = false, features = [
+    "from",
+    "into",
+    "display",
+] }
+scale-info = { version = "2.1.1", default-features = false, features = [
+    "derive",
+] }
 serde = { version = "1.0.136", features = ["derive"], optional = true }
-primitive-types = { version = "0.12.1", default-features = false, features = ["scale-info", "serde_no_std"] }
+primitive-types = { version = "0.12.1", default-features = false, features = [
+    "scale-info",
+    "serde_no_std",
+] }
+keccak-hash = { version = "0.10.0", default-features = true}
 
-[dev-dependencies]
-keccak-hash = "0.10.0"
+# [dev-dependencies]
+
 
 [features]
 default = ["std"]
@@ -24,6 +36,6 @@ std = [
     "codec/std",
     "scale-info/std",
     "serde",
-    "primitive-types/std"
+    "primitive-types/std",
 ]
-ismp_rs_tests = ["std"]
+ismp_rs_tests = ["default"]
