--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,41 +1,10 @@
 [package]
-name = "ismp"
+name = "ismp-rs"
 version = "0.1.0"
 edition = "2021"
 description = "Rust implementation of the ISMP protocol"
 authors = ["Polytope Labs <hello@polytope.technology>"]
 
-[package.metadata.docs.rs]
-all-features = true
-
-[dependencies]
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
-    "derive",
-] }
-derive_more = { version = "0.99.17", default-features = false, features = [
-    "from",
-    "into",
-    "display",
-] }
-scale-info = { version = "2.1.1", default-features = false, features = [
-    "derive",
-] }
-serde = { version = "1.0.136", features = ["derive"], optional = true }
-primitive-types = { version = "0.12.1", default-features = false, features = [
-    "scale-info",
-    "serde_no_std",
-] }
-keccak-hash = { version = "0.10.0", default-features = true}
-
-# [dev-dependencies]
+members = ["tests", "ismp"]
 
 
-[features]
-default = ["std"]
-std = [
-    "codec/std",
-    "scale-info/std",
-    "serde",
-    "primitive-types/std",
-]
-ismp_rs_tests = ["default"]
