--- a/.github/workflows/build-test-and-lint.yml
+++ b/.github/workflows/build-test-and-lint.yml
@@ -9,8 +9,6 @@ on:
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
-    workspace: 
-      path: ismp
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3
@@ -30,37 +28,10 @@ jobs:
           cache-on-failure: true
 
       - name: Build
-        run:  cargo +nightly check --all --benches
+        run:  cargo +nightly check --all --benches --workspace
 
       - name: Build `no-std`
-        run:  cargo +nightly build --no-default-features --verbose --target=wasm32-unknown-unknown
-  
-  ismp-testsuite: 
-    runs-on: ubuntu-latest
-    workspace:
-      path: ismp-testsuite
-    steps: 
-      - name: Checkout sources
-        uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GH_TOKEN }}
-          submodules: recursive
-
-      - name: Install toolchain
-        uses: dtolnay/rust-toolchain@nightly
-        with:
-          components: rustfmt, clippy
-
-      - name: Rust cache
-        uses: Swatinem/rust-cache@v2
-        with:
-          cache-on-failure: true
-      
-      - name: Build
-        run:  cargo +nightly check --all --benches
-
-      - name: Run tests
-        run: cargo +nightly test --all-features --verbose
+        run:  cargo +nightly build -p ismp --no-default-features --verbose --target=wasm32-unknown-unknown
       
   lint:
     runs-on: ubuntu-latest
@@ -85,4 +56,4 @@ jobs:
         run: cargo +nightly fmt --all --check
 
       - name: Check clippy
-        run: cargo +nightly clippy --all-targets --all-features --verbose -- -D warnings
+        run: cargo +nightly clippy --all-targets  --workspace --all-features --verbose -- -D warnings
