--- a/.github/workflows/build-test-and-lint.yml
+++ b/.github/workflows/build-test-and-lint.yml
@@ -56,7 +56,7 @@ jobs:
           cache-on-failure: true
 
       - name: Check format
-        run: cargo +nightly fmt --all --check
+        run: cargo +nightly fmt --all --check --workspace
 
       - name: Check clippy
         run: cargo +nightly clippy --all-targets  --workspace --all-features --verbose -- -D warnings
