--- a/ismp-testsuite/Cargo.toml
+++ b/ismp-testsuite/Cargo.toml
@@ -8,3 +8,7 @@ authors = ["Polytope Labs <hello@polytope.technology>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ismp = { path = "../ismp" }
+primitive-types = "0.12.1"
+codec = { package = "parity-scale-codec", version = "3.1.3" }
+sp-core = "20.0.0"
