--- a/ismp/Cargo.toml
+++ b/ismp/Cargo.toml
@@ -14,6 +14,7 @@ derive_more = { version = "0.99.17", default-features = false, features = ["from
 scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
 serde = { version = "1.0.136", features = ["derive"], optional = true }
 primitive-types = { version = "0.12.1", default-features = false, features = ["scale-info", "serde_no_std"] }
+serde_json = { version = "1.0.99", default-features = false, features = ["alloc"] }
 
 [features]
 default = ["std"]
